# cpp-katas-template

./: CMakeLists.txt  say_hello.cpp  say_hello.hpp
tests/: example_test.cpp
